<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="right"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/list_title_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_ok"
        android:paddingLeft="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <ListView
        android:id="@+id/devlist_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/devlist_title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_ok"
        android:paddingLeft="5dp"
        android:text="@string/available"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:alpha="0.5"
            android:contentDescription=""
            android:src="@drawable/ic_search"
            tools:ignore="ContentDescription"
             />

        <TextView
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img_search"
            android:text="@string/scan"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>

