<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border"
    android:padding="16dp"
    tools:ignore="MissingClass">

    <!-- 退出按钮 -->
    <Button
        android:id="@+id/btn_pub_finish"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:text="@string/exit"
        android:textColor="@color/dialog_error"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Payload 输入 -->
    <EditText
        android:id="@+id/edit_payload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/pub_payload"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:text="@string/pub_payload"
        android:textColor="@color/dialog_text_primary"
        android:textColorHint="@color/dialog_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_pub_finish"
        tools:ignore="LabelFor" />

    <!-- Topic 输入 -->
    <EditText
        android:id="@+id/edit_pub_topic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/topic"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="@string/topic"
        android:textColor="@color/dialog_text_primary"
        android:textColorHint="@color/dialog_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_payload"
        tools:ignore="LabelFor" />

    <!-- 确认按钮 -->
    <Button
        android:id="@+id/btn_pub_confirm"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_border"
        android:text="@string/confirm"
        android:textColor="@color/dialog_button_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pub_topic" />

</androidx.constraintlayout.widget.ConstraintLayout>