<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        tools:ignore="UselessParent">

        <SurfaceView
            android:id="@+id/show"
            android:layout_width="300dp"
            android:layout_height="300dp" />

        <LinearLayout
            android:id="@+id/toor"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/pull"
                android:textColor="#FF8D00"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <Button
            android:id="@+id/pause_bn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|right"
            android:text="@string/pause"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/out_bn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_toLeftOf="@id/pause_bn"
            android:text="@string/hide"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="#ffffe9d5"
            android:typeface="monospace"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/minimize"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="9dp"
            android:layout_above="@id/imageView"
            android:layout_alignParentRight="true"
            android:text="@string/min"
            android:textColor="#ffff0000"
            android:textSize="9sp"
            tools:ignore="RtlHardcoded,SmallSp" />

    </RelativeLayout>

</FrameLayout>

