<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/chart_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <SurfaceView
            android:id="@+id/show"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/toor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:text="@string/pull"
                android:textColor="#FF8D00"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- 从左到右：暂停 | 隐藏（隐藏在最右侧，点它顺带暂停采样并把暂停按钮收起来） -->
        <Button
            android:id="@+id/out_bn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/hide" />

        <Button
            android:id="@+id/pause_bn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/out_bn"
            android:text="@string/pause" />

        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="#ffffe9d5"
            android:typeface="monospace"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_minimize" />

        <TextView
            android:id="@+id/min_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/image_view"
            android:layout_alignParentEnd="true"
            android:text="@string/min"
            android:textColor="#ffff0000"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

    </RelativeLayout>

</FrameLayout>
